docs: add documentation for content
