# handler/deleteContentHandler.go
@@ -8,6 +8,19 @@ import (
 	"github.com/levifleal/MyFlix/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Delete Content
+// @Description Delete a new Media Content
+// @Tags Media Contents
+// @Accept json
+// @Produce json
+// @Param id query string true "Content Identification"
+// @Success 200 {object} DeleteContentResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /Content [delete]
 func DeleteContentHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
