# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/levifleal/MyFlix/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
@@ -20,4 +21,28 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}) {
 		"msg":  fmt.Sprintf("success operation from handler: %s", op),
 		"data": data,
 	})
+}
+
+type ErrorResponse struct {
+	Message string `json:"msg"`
+}
+type CreateContentResponse struct {
+	Message string                  `json:"msg"`
+	Data    schemas.ContentResponse `json:"data"`
+}
+type DeleteContentResponse struct {
+	Message string                  `json:"msg"`
+	Data    schemas.ContentResponse `json:"data"`
+}
+type ShowContentResponse struct {
+	Message string                  `json:"msg"`
+	Data    schemas.ContentResponse `json:"data"`
+}
+type ListContentsResponse struct {
+	Message string                    `json:"msg"`
+	Data    []schemas.ContentResponse `json:"data"`
+}
+type UpdateContentsResponse struct {
+	Message string                    `json:"msg"`
+	Data    []schemas.ContentResponse `json:"data"`
 }
