# handler/showContentHandler.go
@@ -7,6 +7,19 @@ import (
 	"github.com/levifleal/MyFlix/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show Content
+// @Description Show a Media Content
+// @Tags Media Contents
+// @Accept json
+// @Produce json
+// @Param id query string true "Content Identification"
+// @Success 200 {object} ShowContentResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /Content [get]
 func ShowContentHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
