# router/routes.go
@@ -13,16 +13,14 @@ func initRoutes(r *gin.Engine) {
 	//initialize handler
 	handler.InitHandler()
 	basePath := "/api/v1"
-
 	docs.SwaggerInfo.BasePath = basePath
-
 	v1 := r.Group(basePath)
 	{
-		v1.GET("/serie", handler.ShowContentHandler)
-		v1.POST("/serie", handler.CreateContentHandler)
-		v1.DELETE("/serie", handler.DeleteContentHandler)
-		v1.PUT("/serie", handler.UpdateContentHandler)
-		v1.GET("/series", handler.ListContentsHandler)
+		v1.GET("/Content", handler.ShowContentHandler)
+		v1.POST("/Content", handler.CreateContentHandler)
+		v1.DELETE("/Content", handler.DeleteContentHandler)
+		v1.PUT("/Content", handler.UpdateContentHandler)
+		v1.GET("/Contents", handler.ListContentsHandler)
 	}
 
 	//initialize Swagger
